--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -11,7 +11,7 @@ a.button {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 18%;
+  max-width: auto !important;
   padding: 8px 8px;
   margin: 20px 0px !important;
   color: inherit;
