button coloring and text

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 /* light theme color */
 $light-background: #fff;
-$light-background-secondary: #eaeaea;
+$light-background-secondary: #999999;
 $light-background-secondary-highlight: #20d9ba;
 $light-color: #222;
 $light-color-secondary: #999;
