--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -14,11 +14,11 @@ a.button {
   max-width: auto !important;
   padding: 8px 8px;
   margin: 20px 0px !important;
-  color: inherit;
+  color: #fff;
   background: $light-background-secondary-highlight;
   text-decoration: none;
   text-align: center;
-  font-weight: 600;
+  font-weight: 800;
   border-radius: 8px;
   border: 1px solid transparent;
   appearance: none;
