--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,6 +7,8 @@
                 {{ partial "menu.html" . }}
             {{ end }}
 
+        <span> <a target="_blank" href="https://github.com/guardiome"><img style="width: 24px;" src="/github_logo.svg"></a></span>
+
         </span>
     </span>
 </header>
