--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -14,7 +14,7 @@ a.button {
   width: fit-content;
   padding: 8px 8px;
   margin: 20px 0px !important;
-  color: #fff;
+  color: #fff !important;
   background: $light-background-secondary-highlight;
   text-decoration: none;
   text-align: center;
