changed default secondary dark color

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,7 +10,7 @@ $light-border-color: #dcdcdc;
 
 /* dark theme colors */
 $dark-background: #fff;
-$dark-background-secondary: #999999;
+$dark-background-secondary: #fafafa;
 $dark-background-secondary-highlight: #20d9ba;
 $dark-color: #222;
 $dark-color-secondary: #999;
