button edits more

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -40,8 +40,8 @@ a.button {
   }
 
   highlight-button {
-      background: #20d9ba;
-      color: #fff;
+      background: #20d9ba !important;
+      color: #fff !important;
   }
 
   &.primary {
