--- a/layouts/index.html
+++ b/layouts/index.html
@@ -83,7 +83,7 @@
     </div>
  
   
-    <p class="ccd-text">The Childhood Cancer Directory is a support network for kids experiencing cancer. We list valuable resources for kids with cancer and their families. We have mentors, including cancer survivors and medical students, who meet with them and help in all sorts of ways. We want to not only get them through cancer, but make them successful in life.</p>
+    <p class="ccd-text">The Childhood Cancer Directory is a support network for kids experiencing cancer. We list valuable resources for kids with cancer and their families. We have mentors, including cancer survivors and medical students, who meet with them and help in all sorts of ways. We want to not only get them through cancer, but also make them successful in life.</p>
 </div>
 </div>
 
