--- a/assets/scss/components/_main-menu-mobile.scss
+++ b/assets/scss/components/_main-menu-mobile.scss
@@ -77,3 +77,9 @@
 .lock-scroll {
   overflow: hidden;
 }
+
+.ccd-link-mobile {
+    color: #fff;
+    text-decoration: none;
+    margin: 20px 0;
+}
