--- a/layouts/index.html
+++ b/layouts/index.html
@@ -79,7 +79,7 @@
     <h1 class="ccd-title">The Childhood Cancer Directory</h1>
   </div>
     <div class="ccd-button-row">
-        <a class="button ccd-button" target="_blank" href="https://childhoodcancerdirectory.org/signup">Join</a>
+        <a class="button ccd-button" target="_blank" href="http://ec2-34-238-126-195.compute-1.amazonaws.com/signup">Join</a>
     </div>
  
   
