homepage text and buttons

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,7 @@
         <!--{{ partial "call.html" . }} -->
         
         <div class="donate-button"> 
-            <a class="dbox-donation-button" style="background: #20d9ba url(https://d1iczxrky3cnb2.cloudfront.net/red_logo.png) no-repeat 18px;color: #fff;text-decoration: none;font-family: Verdana,sans-serif;display: inline-block;font-size: 16px;padding: 10px 16px;padding-left: 56px;-webkit-border-radius: 2px;-moz-border-radius: 2px;border-radius: 2px;box-shadow: 0 2px 0 0 #169681;text-shadow: 0 2px rgba(0, 0, 0, 0.3);" href="https://donorbox.org/guardiome?default_interval=o">Donate</a>
+            <a class="donate-button-donorbox" target="_blank" href="https://donorbox.org/guardiome?default_interval=o">Donate</a>
         </div>
 
       </div>
@@ -54,7 +54,7 @@
           <div class="feature-image"><img alt="Helps Kids With Cancer logo" src="images/features/kids.svg" /></div>
           <h2 class="feature-title">For the Kids</h2>
           <div class="feature-content">
-            <p>Our analytics will help children understand their disease, learn about their treatment, take their medications, forecast their health, and improve their health after treatment.</p>
+            <p>Our analytics will help children understand their disease, learn about their treatment, take their medications, forecast their health, and maximize their well-being after treatment.</p>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
           <div class="feature-image"><img alt="Helps Oncologists logo" src="images/features/doctor_1.svg" /></div>
           <h2 class="feature-title">For the Doctors</h2>
           <div class="feature-content">
-            <p>Our analytics will help doctors characterize childhood cancer, prioritize their treatment, predict their response and track their recovery.</p>
+            <p>Our analytics will help doctors characterize childhood cancer, prioritize treatment, predict response, and track recovery.</p>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
     </div>
  
   
-    <p class="ccd-text">The Childhood Cancer Directory is a support network for kids experiencing cancer. We list valuable resources for kids with cancer and their families. We have mentors, including cancer survivors and medical students, who meet with them and help in all sorts of ways. We want to not only get them through cancer, but also make them successful in life.</p>
+<p class="ccd-text">The Childhood Cancer Directory is a support network for kids experiencing cancer. Its our way of connecting directly with childhood cancer patients to support them and listen to them. We have mentors, including cancer survivors and medical students, who meet with them weekly and help in all sorts of ways. If you are a childhood cancer patient, or want to help, <a style="text-decoration: none; font-weight:700;" target="_blank" href="https://childhoodcancerdirectory.org/signup">sign up for the directory here.</a></p>
 </div>
 </div>
 
