--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -9,7 +9,6 @@
   border-radius: 4px;
   font-size: 15px;
   font-weight: 600;
-  text-transform: uppercase;
   letter-spacing: 0.025em;
   color: #ffffff;
   text-decoration: none;
@@ -24,9 +23,23 @@
   }
 }
 
-.donate-button {
+.donate-button-container {
     margin-top: 40px;
     margin-bottom: 60px;
+}
+
+.donate-button-donorbox {
+    background: #20d9ba url(https://d1iczxrky3cnb2.cloudfront.net/red_logo.png) no-repeat 18px;color: #fff;
+    text-decoration: none;
+    font-family: Verdana, sans-serif;
+    font-weight: 300;
+    display: inline-block;
+    font-size: 20px;
+    padding: 12px 16px;
+    padding-left: 56px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
 }
 
 .ccd-button-row {
@@ -38,4 +51,7 @@
 
 .ccd-button {
     min-width: 120px;
+    font-family: Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
 }
