remove donate button and google analytics

--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -8,7 +8,7 @@
         <span>{{ .Name }}</span>
       </a>
     </li>
-      <a class="ccd-link" target="_blank" href="http://ec2-34-238-126-195.compute-1.amazonaws.com/login">
+      <a class="ccd-link" target="_blank" href="https://childhoodcancerdirectory.org">
         <span>Childhood Cancer Directory</span>
       </a>
     {{end}}
