--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,10 +27,6 @@
 
         {{ .Content }}
         <!--{{ partial "call.html" . }} -->
-        
-        <div class="donate-button"> 
-            <a class="donate-button-donorbox" target="_blank" href="https://donorbox.org/guardiome?default_interval=o">Donate</a>
-        </div>
 
       </div>
       {{ if .Params.intro_image }}
@@ -79,7 +75,7 @@
     <h1 class="ccd-title">The Childhood Cancer Directory</h1>
   </div>
     <div class="ccd-button-row">
-        <a class="button ccd-button" target="_blank" href="http://ec2-34-238-126-195.compute-1.amazonaws.com/signup">Join</a>
+        <a class="button ccd-button" target="_blank" href="https://childhoodcancerdirectory.org/signup">Join</a>
     </div>
  
   
