--- a/layouts/partials/main-menu-mobile.html
+++ b/layouts/partials/main-menu-mobile.html
@@ -7,7 +7,7 @@
         <span>{{ .Name }}</span>
       </a>
     </li>
-      <a class="menu-item-childhood-cancer-directory active ccd-link-mobile" target="_blank" href="http://ec2-34-238-126-195.compute-1.amazonaws.com/login">
+      <a class="menu-item-childhood-cancer-directory active ccd-link-mobile" target="_blank" href="https://childhoodcancerdirectory.org">
         <span>Childhood Cancer Directory</span>
       </a>
     {{end}}
