--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,8 +5,7 @@
         <div class="footer-inner">
           <h3 class="footer-title">{{.Site.Title}}</h3>
           <div class="footer-email">
-            <a href="mailto:team@guardiome.org"><img class="footer-icon" src="/images/email.png"></a>
-            <p class="footer-email-text">team@guardiome.org</p>
+            <a class="footer-email-text" href="mailto:team@guardiome.org">team@guardiome.org</a>
           </div> 
           <ul>
             {{ $currentPage := . }}
