--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -86,4 +86,9 @@
 .footer-email-text {
     margin-bottom: 0 !important;
     color: #acacc3;
+    text-decoration: none;
 }
+
+.footer-email-text:hover {
+        color: $primary;
+    }
