--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -8,9 +8,9 @@
         <span>{{ .Name }}</span>
       </a>
     </li>
-      <a class="ccd-link" target="_blank" href="https://childhoodcancerdirectory.org">
+      <!-- <a class="ccd-link" target="_blank" href="https://childhoodcancerdirectory.org">
         <span>Childhood Cancer Directory</span>
-      </a>
+      </a> -->
     {{end}}
   </ul>
 </div>
