--- a/layouts/index.html
+++ b/layouts/index.html
@@ -69,7 +69,7 @@
 </div>
 {{end}}
 
-<div class="strip strip-grey">
+<!-- <div class="strip strip-grey">
 <div class="container pt-8 pb-8 pb-md-5">
   <div class="row justify-content-center">
     <h1 class="ccd-title">The Childhood Cancer Directory</h1>
@@ -81,7 +81,7 @@
   
 <p class="ccd-text">The Childhood Cancer Directory is a support network for kids experiencing cancer. Its our way of connecting directly with childhood cancer patients to support them and listen to them. We have mentors, including cancer survivors and medical students, who meet with them weekly and help in all sorts of ways. If you are a childhood cancer patient, or want to help, <a style="text-decoration: none; font-weight:700;" target="_blank" href="https://childhoodcancerdirectory.org/signup">sign up for the directory here.</a></p>
 </div>
-</div>
+</div> -->
 
 {{ end }}
 
