--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -8,9 +8,9 @@
         <span>{{ .Name }}</span>
       </a>
     </li>
-      <!-- <a class="ccd-link" target="_blank" href="https://childhoodcancerdirectory.org">
-        <span>Childhood Cancer Directory</span>
-      </a> -->
+      <a class="ccd-link" target="_blank" href="https://guardiome.com">
+        <span>Guardiome.com</span>
+      </a>
     {{end}}
   </ul>
 </div>
